--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           cd /var/www/html
           rm -rf *
           git clone https://github.com/saurabh-jadhav-09/hello-world-aws .
-          cp /hello-worls-aws/index.html index.html
+          cp /hello-world-aws/index.html index.html
         
           sudo systemctl restart apache2
         EOF
