--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-          scp -i ${{ secrets.SSH_PRIVATE_KEY }} -o StrictHostKeyChecking=no ./index.html ${{ secrets.USERNAME }}@${{ secrets.EC2_PUBLIC_IP }}:/var/www/html/
+          scp -o StrictHostKeyChecking=no ./index.html ${{ secrets.USERNAME }}@${{ secrets.EC2_PUBLIC_IP }}:/var/www/html/
