--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,5 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-          scp -o StrictHostKeyChecking=no ./index.html ${{ secrets.USERNAME }}@${{ secrets.EC2_PUBLIC_IP }}:/var/www/html/
+          scp -o StrictHostKeyChecking=no ./index.html ${{ secrets.USERNAME }}@${{ secrets.EC2_PUBLIC_IP }}:/tmp/index.html
+          ssh -tt -i ${{ secrets.SSH_PRIVATE_KEY }} ${{ secrets.USERNAME }}@${{ secrets.EC2_PUBLIC_IP }} "sudo mv /tmp/index.html /var/www/html/index.html"
